feat: create add remove bookmarks remote component (#44)
* feat: create and expose initial version of remote component

* feat: create initial working version of remote component

* fix: improve error handling and extract code to methods and service

* fix: fix tests
