# src/app/shared/components/dialogs/create-update-bookmark-dialog/create-update-bookmark-dialog.viewmodel.ts
@@ -1,0 +1,6 @@
+import { Bookmark } from 'src/app/shared/generated'
+
+export interface CreateUpdateBookmarkDialogViewModel {
+  initialBookmark: Bookmark | undefined
+  permissions: string[] | undefined
+}
